--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -94,12 +94,9 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 \subsection{Characterization of remaining systematics}
 \label{ssec:characterization}
 %\mc{Edmond: compute these for each sub-survey.} 
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling the spurious fluctuations in the galaxy density field. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are estimated to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over-correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, e.g., via dimensionality reduction techniques, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
 
-Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps, while controlling the over correction effect.  In \S \ref{ssec:characterization}, we describe how we achieve this objective, by employing a series of simulations along with statistical methods that involve calculating the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. to identify different sets of the imaging systematic maps:
+Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps, while controlling the over-correction effect.  In \S \ref{ssec:characterization}, we describe how we achieve this objective, by employing a series of simulations along with statistical methods that involve calculating the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. We test different sets of the imaging systematic maps to identify the optimal set:
 \begin{enumerate}[itemindent=*]
 \item \textbf{Two maps}: Extinction, depth in z.
 \item \textbf{Three maps}: Extinction, depth in z, psfsize in r.
