--- a/refs.bib
+++ b/refs.bib
@@ -752,6 +752,24 @@ title = {Ohio Supercomputer Center}
 }
 
 
+@ARTICLE{2020MNRAS.495.1613R,
+       author = {{Rezaie}, Mehdi and {Seo}, Hee-Jong and {Ross}, Ashley J. and {Bunescu}, Razvan C.},
+        title = "{Improving galaxy clustering measurements with deep learning: analysis of the DECaLS DR7 data}",
+      journal = {\mnras},
+     keywords = {editorials, notices, miscellaneous, catalogues, surveys, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Data Analysis, Statistics and Probability},
+         year = 2020,
+        month = jun,
+       volume = {495},
+       number = {2},
+        pages = {1613-1640},
+          doi = {10.1093/mnras/staa1231},
+archivePrefix = {arXiv},
+       eprint = {1907.11355},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.495.1613R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{rezaie2021primordial,
   title={Primordial non-Gaussianity from the completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey--I: Catalogue preparation and systematic mitigation},
   author={Rezaie, Mehdi and Ross, Ashley J and Seo, Hee-Jong and Mueller, Eva-Maria and Percival, Will J and Merz, Grant and Katebi, Reza and Bunescu, Razvan C and Bautista, Julian and Brownstein, Joel R and others},
