--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,3 +1,10 @@
+\section{Redshift uncertainties}
+We use the Early Data Assembly Version 1 (EDA V1) to construct the redshift distribution for the DESI LRG targets. We find that the change in the maximum likelihood estimate of $\fnl$ is negligible, $\Delta \fnl=-1$. Figure \ref{fig:cl_nz} shows the measured power spectrum of the DESI targets and the corresponding best fit theory curves. The variations in $dN/dz$ do not significicantly alter the conclusion of our paper.
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{figures/cl_nz.pdf}\caption{The measured power spectrum of the DESI DR9 LRG sample and the best fit theory models using different redshift distributions.}\label{fig:cl_nz}
+\end{figure}
+
 \section{Scale dependent systematics}\label{sec:scalesys}
 Our fiducial cross power spectrum diagnostic uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}=20$ to $100$, which corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the chi2 values for our sample cleaned respectively with the linear and neural network approaches, both with \textit{three maps}. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas linear three maps exhibits significant remaining systematics at more than 95\% confidence.
 
@@ -85,7 +92,7 @@ We find that the imaging treatment has removed some of the true clustering signa
 
 \begin{table*}
   %\begin{center}
-    \caption{best-fitting and marginalized estimates for $\fnl$ from fitting the mean power spectrum of the mocks before and after corrections using the non-linear approach with various combinations of the imaging systematic maps. The estimates are not accounted for over correction, and therefore are subject to mitigation systematics.}   
+    \caption{best-fitting and marginalized estimates for $\fnl$ from fitting the mean power spectrum of the mocks before and after corrections using the non-linear approach with various combinations of the imaging systematic maps. The estimates are not accounted for over-correction, and therefore are subject to mitigation systematics.}   
     \label{tab:contmocksmcmc}  
    \centerline{%
     \begin{tabular}{lllllll}
@@ -122,7 +129,7 @@ Using the calibration parameters presented in \S \ref{ssec:calibration}, we acco
 \includegraphics[width=0.45\textwidth]{figures/mcmc_contnoshift.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_cont.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_contnoshift.pdf}
-\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the non-linear methods using three, four, and nine maps. The dashed (solid) curves show the distributions for the contaminated (clean) mocks. Left: The posteriors are adjusted to account for the over correction effect. Right: The posteriors are subject to the over correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
+\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the non-linear methods using three, four, and nine maps. The dashed (solid) curves show the distributions for the contaminated (clean) mocks. Left: The posteriors are adjusted to account for the over-correction effect. Right: The posteriors are subject to the over-correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
 \end{figure*}
 
 
